--- a/2020.md
+++ b/2020.md
@@ -1,10 +1,25 @@
 
-# Front-End Developer Roadmap In 2021
+# Front-End Developer Roadmap In 2020
 
 > This repository aims to collect the most important concepts of front-end. In order to do that, I will continue to improve this repository, so you might want to watch 🔭 this repository!
 
+* 🔥 Modern Front-End Developer Roadmap
+* 🔥 Front-End Developer With More Skills
+* 🔥 Nodejs Full Stack Developer Roadmap
+* (To Be Continue)
 
-![Front-End Developer Roadmap](./images/2021-fe.svg)
+## 🔥 Modern Front-End Developer Roadmap
+
+![Modern Front-End Developer Roadmap](./images/frontend-1.3.svg)
+
+## 🔥 Front-End Developer With More Skills
+
+![More Skills](./images/moreskill-1.2.svg)
+
+## 🔥 Nodejs Full Stack Developer Roadmap
+
+![Nodejs Full Stack Developer Roadmap](./images/fullstack-1.1.svg)
+
 
 ## Contribution
 
